--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
       <img src="https://res.cloudinary.com/doqhdodfl/image/upload/v1769618710/res5_jxauuq.jpg" alt="">
       <img src="https://res.cloudinary.com/doqhdodfl/image/upload/v1769616400/res3.1_byntlo.jpg" alt="">
       <img src="https://res.cloudinary.com/doqhdodfl/image/upload/v1769616405/res4_l04pdz.jpg" alt="">
-      <img src="https://res.cloudinary.com/doqhdodfl/image/upload/v1769616391/res2_nbzdyi.jpg" alt="">
+      <img src="https://res.cloudinary.com/doqhdodfl/image/upload/v1769700408/res2_nbzdyi.jpg" alt="">
     </div>
 
     <!-- OKLAR -->
@@ -474,10 +474,15 @@
 
   <div class="contact-spacer"></div>
 
+  <div class="footer-credit">
+    <img src="https://res.cloudinary.com/doqhdodfl/image/upload/v1769713023/ps_ta6yrd.png" alt="Pirata Studio Istanbul">
+  </div>
 
   <div class="footer-bottom">
-    © 2026 Genoa Port Hotel. All rights reserved.
+    © 2026 Genoa Port Hotel. All rights reserved. 
   </div>
+
+  
 </footer>
 
 <button class="back-to-top" id="backToTop">↑</button>
